Fix project tag issue

--- a/public/project/bamsaur/index.html
+++ b/public/project/bamsaur/index.html
@@ -655,6 +655,10 @@
 
   
   
+  <span class="middot-divider"></span>
+  <span class="article-categories">
+    <i class="fas fa-folder mr-1"></i><a href="/categories/other/">other</a></span>
+  
 
 </div>
 
@@ -765,7 +769,9 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/dental/">Dental</a>
+  <a class="badge badge-light" href="/tags/dental-wear/">dental wear</a>
+  
+  <a class="badge badge-light" href="/tags/other/">other</a>
   
 </div>
 
