--- a/public/project/harvest/index.html
+++ b/public/project/harvest/index.html
@@ -653,6 +653,10 @@
 
   
   
+  <span class="middot-divider"></span>
+  <span class="article-categories">
+    <i class="fas fa-folder mr-1"></i><a href="/categories/calculus/">calculus</a></span>
+  
 
 </div>
 
@@ -758,9 +762,11 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/diet/">Diet</a>
+  <a class="badge badge-light" href="/tags/diet/">diet</a>
   
-  <a class="badge badge-light" href="/tags/dental-calculus/">Dental calculus</a>
+  <a class="badge badge-light" href="/tags/calculus/">calculus</a>
+  
+  <a class="badge badge-light" href="/tags/dental-calculus/">dental calculus</a>
   
 </div>
 
@@ -899,6 +905,15 @@
 
 
   
+  
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/post/spit/">Spit, Tartar, and Burial</a></li>
+      
+    </ul>
+  </div>
   
 
 
